--- a/bm_naive_counts.ipynb
+++ b/bm_naive_counts.ipynb
@@ -34,11 +34,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e5821ef8-d4b7-4075-9e2c-29a426bdd8c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'bm_preproc'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[0;32m      2\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBioinformatics\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbm_preproc\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BoyerMoore\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbm_with_counts\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m boyer_moore_with_counts\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgeneReader\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m geneReader\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'bm_preproc'"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
+    "sys.path.append(\"Bioinformatics\")\n",
+    "\n",
     "from bm_preproc import BoyerMoore\n",
     "\n",
     "from bm_with_counts import boyer_moore_with_counts\n",
@@ -378,6 +393,14 @@
     "\n",
     "print ( 'Matches with an indexed object using subsequences:', approximate_match_subseq ( p, t, n, ival ) [ 1 ] )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e2f84ca-1283-42da-a4f8-9420f5f6f804",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
