--- a/waftef.ipynb
+++ b/waftef.ipynb
@@ -2,40 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "da91aed6-3759-4494-b91d-e2df62e96d0c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['C:\\\\Users\\\\ecmos\\\\Genome Sequencing Practice\\\\Bioinformatics\\\\Analysis Notebooks',\n",
-       " 'C:\\\\Users\\\\ecmos\\\\anaconda3\\\\python38.zip',\n",
-       " 'C:\\\\Users\\\\ecmos\\\\anaconda3\\\\DLLs',\n",
-       " 'C:\\\\Users\\\\ecmos\\\\anaconda3\\\\lib',\n",
-       " 'C:\\\\Users\\\\ecmos\\\\anaconda3',\n",
-       " '',\n",
-       " 'C:\\\\Users\\\\ecmos\\\\AppData\\\\Roaming\\\\Python\\\\Python38\\\\site-packages',\n",
-       " 'C:\\\\Users\\\\ecmos\\\\anaconda3\\\\lib\\\\site-packages',\n",
-       " 'C:\\\\Users\\\\ecmos\\\\anaconda3\\\\lib\\\\site-packages\\\\win32',\n",
-       " 'C:\\\\Users\\\\ecmos\\\\anaconda3\\\\lib\\\\site-packages\\\\win32\\\\lib',\n",
-       " 'C:\\\\Users\\\\ecmos\\\\anaconda3\\\\lib\\\\site-packages\\\\Pythonwin']"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path"
+    "import os\n",
+    "\n",
+    "module_path = os.path.abspath ( os.path.join ( '..' ) ) \n",
+    "\n",
+    "if module_path not in sys.path :\n",
+    "    \n",
+    "    sys.path.append ( module_path + \"\\\\PyScripts\" )\n",
+    "\n",
+    "from match import match"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "6c7bc938-b8ee-4b18-9350-74842f897f76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3165da25-e7ef-4bc2-97d0-a085adc927aa",
    "metadata": {},
    "outputs": [],
    "source": []
