Update scripts / notebooks.
Updating scripts and notebooks for matching analysis.

--- a/bm_naive_counts.ipynb
+++ b/bm_naive_counts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8a100202-76b8-4624-a40f-bcead44102dc",
+   "id": "aa96ade6",
    "metadata": {},
    "source": [
     "# Naive, Approximate, and Boyer Moore Matching Comparisons"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70d09a0c-5e26-4816-ac59-c3e76efd8a79",
+   "id": "08754214",
    "metadata": {},
    "source": [
     "Implementing versions of the naive exact matching and Boyer-Moore algorithms that also \n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8bf8901-3b13-4d75-9224-32927ee112f6",
+   "id": "3cf00491",
    "metadata": {},
    "source": [
     "---\n",
@@ -35,48 +35,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e5821ef8-d4b7-4075-9e2c-29a426bdd8c8",
+   "id": "a14dc774",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'bm_preproc'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 10\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m module_path \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m sys\u001b[38;5;241m.\u001b[39mpath :\n\u001b[0;32m      8\u001b[0m     sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend ( module_path \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\\\\u001b[39;00m\u001b[38;5;124mPyScripts\u001b[39m\u001b[38;5;124m\"\u001b[39m )\n\u001b[1;32m---> 10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbm_preproc\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BoyerMoore\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mbm_with_counts\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m boyer_moore_with_counts\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgeneReader\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m geneReader\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'bm_preproc'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import sys\n",
-    "import os\n",
+    "from PyScripts.bm_preproc import BoyerMoore\n",
     "\n",
+    "from PyScripts.bm_with_counts import boyer_moore_with_counts\n",
     "\n",
-    "\n",
-    "module_path = os.path.abspath ( os.path.join ( '..' ) ) \n",
-    "\n",
-    "if module_path not in sys.path :\n",
-    "    \n",
-    "    sys.path.append ( module_path + \"\\\\PyScripts\" )\n",
-    "\n",
-    "from bm_preproc import BoyerMoore\n",
-    "\n",
-    "from bm_with_counts import boyer_moore_with_counts\n",
-    "\n",
-    "from geneReader import geneReader"
+    "from PyScripts.geneReader import geneReader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "96b5dbfa-04c0-48a2-b46f-8088c083391b",
+   "execution_count": 2,
+   "id": "69e60da6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'chr1.GRCh38.excerpt.fasta'\n",
+    "filename = 'SeqFiles/chr1.GRCh38.excerpt.fasta'\n",
     "\n",
     "data = open ( filename, 'r' )\n",
     "\n",
@@ -87,10 +64,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1b83750c-a6d4-460b-93ed-a3c18d0df72e",
+   "execution_count": 3,
+   "id": "43b02300",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Boyer Moore occurrences: [56922]\n",
+      "Boyer Moore alignments: 127974\n",
+      "Boyer Moore character comparisons: 165191\n"
+     ]
+    }
+   ],
    "source": [
     "t = reads\n",
     "\n",
@@ -109,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75307387-398f-415f-ae17-06e68fdb27b3",
+   "id": "3719836b",
    "metadata": {},
    "source": [
     "---\n",
@@ -118,24 +105,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "df56e19b-197c-499f-808e-a47082629d3f",
+   "execution_count": 4,
+   "id": "7e681079",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from naive_with_counts import naive_with_counts\n",
+    "from PyScripts.naive_with_counts import naive_with_counts\n",
     "\n",
-    "from geneReader import geneReader"
+    "from PyScripts.geneReader import geneReader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4aa7e13c-4655-46f3-8feb-da0ee617eb59",
+   "execution_count": 5,
+   "id": "609997a4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'chr1.GRCh38.excerpt.fasta'\n",
+    "filename = 'SeqFiles/chr1.GRCh38.excerpt.fasta'\n",
     "\n",
     "data = open ( filename, 'r' )\n",
     "\n",
@@ -146,10 +133,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ea5fb8de-46c7-403e-83c5-12a32c5b8c4f",
+   "execution_count": 6,
+   "id": "5db613f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naive exact matching occurrences: [56922]\n",
+      "Naive exact matching alignments: 799954\n",
+      "Naive exact matching character comparisons: 984143\n"
+     ]
+    }
+   ],
    "source": [
     "t = reads\n",
     "\n",
@@ -164,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6d61f5c-17f2-4284-868a-c0de2f3dd8c3",
+   "id": "dd0f50fa",
    "metadata": {},
    "source": [
     "---\n",
@@ -173,26 +170,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d8779612-cd41-4166-aa88-f7a060f3d44f",
+   "execution_count": 7,
+   "id": "543e76cf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from naive_mismatches import naive_mismatches\n",
+    "from PyScripts.naive_mismatches import naive_mismatches\n",
     "\n",
-    "from geneReader import geneReader"
+    "from PyScripts.geneReader import geneReader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2007b3f4-eb54-4e21-8689-b175a4834cf1",
+   "execution_count": 8,
+   "id": "0a8b6ebc",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "filename = 'chr1.GRCh38.excerpt.fasta'\n",
+    "filename = 'SeqFiles/chr1.GRCh38.excerpt.fasta'\n",
     "\n",
     "data = open ( filename, 'r' )\n",
     "\n",
@@ -203,12 +200,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6f904f20-d144-4fbd-86d7-904c1300eae8",
+   "execution_count": 9,
+   "id": "4e822571",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Occurences using naive matching with up to 2 mismatches: 19\n"
+     ]
+    }
+   ],
    "source": [
     "p = 'GGCGCGGTGGCTCACGCCTGTAAT'\n",
     "\n",
@@ -219,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6eab6268-7151-44c0-90b3-077239cbe804",
+   "id": "2eb1d60f",
    "metadata": {},
    "source": [
     "---\n",
@@ -229,30 +234,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1c055fcb-a76d-4f0a-af35-144fc394142a",
+   "execution_count": 10,
+   "id": "a040fa19",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from kmer_index import Index\n",
+    "from PyScripts.kmer_index import Index\n",
     "\n",
-    "from approximate_match_idx import approximate_match_idx"
+    "from PyScripts.approximate_match_idx import approximate_match_idx\n",
+    "\n",
+    "from PyScripts.geneReader import geneReader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0ed345a9-9d8f-40dc-8047-ec66dcdaf944",
+   "execution_count": 11,
+   "id": "de17e998",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from geneReader import geneReader\n",
-    "\n",
-    "filename = 'chr1.GRCh38.excerpt.fasta'\n",
+    "filename = 'SeqFiles/chr1.GRCh38.excerpt.fasta'\n",
     "\n",
     "data = open ( filename, 'r' )\n",
     "\n",
@@ -263,12 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bb51efb8-e8db-468d-b3ee-bf9780ce711a",
+   "execution_count": 12,
+   "id": "cd38cf16",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximate Matches of an Indexed Object: 90\n"
+     ]
+    }
+   ],
    "source": [
     "p = 'GGCGCGGTGGCTCACGCCTGTAAT'\n",
     "\n",
@@ -279,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "042785cd-ce95-4d85-a16d-22ed0d9a503d",
+   "id": "d1e68ad7",
    "metadata": {},
    "source": [
     "---\n",
@@ -288,28 +301,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "979897be-c46f-4c72-8286-b39f39a8804c",
+   "execution_count": 13,
+   "id": "3e6bbeda",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from approximate_match import approximate_match\n",
+    "from PyScripts.approximate_match import approximate_match\n",
     "\n",
-    "from geneReader import geneReader"
+    "from PyScripts.geneReader import geneReader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c1936ed1-0f8e-4664-a0b2-9e120a9938e6",
+   "execution_count": 14,
+   "id": "f47951f6",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "filename = 'chr1.GRCh38.excerpt.fasta'\n",
+    "filename = 'SeqFiles/chr1.GRCh38.excerpt.fasta'\n",
     "\n",
     "data = open ( filename, 'r' )\n",
     "\n",
@@ -320,12 +333,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "df223329-823e-4bd2-8065-f4b1730a4a8f",
+   "execution_count": 15,
+   "id": "abec1b85",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches using Approximate Matching with Boyer Moore Object: 61\n"
+     ]
+    }
+   ],
    "source": [
     "p = 'GGCGCGGTGGCTCACGCCTGTAAT'\n",
     "\n",
@@ -336,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b42c255-299f-4558-8f9c-7259beac3a92",
+   "id": "d553a051",
    "metadata": {
     "tags": []
    },
@@ -346,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ba6d046-ca64-4ae0-b864-52492f848276",
+   "id": "44014657",
    "metadata": {},
    "source": [
     "### Occurences Using a SubseqIndex Object, Up to 2 Mismatches"
@@ -354,26 +375,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "957767c0-143c-47f0-adb0-c218cebe8dd2",
+   "execution_count": 16,
+   "id": "7e669d1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from SubseqIndex import SubseqIndex\n",
+    "from PyScripts.subSequenceIdx import SubSeqIndex\n",
     "\n",
-    "from approximate_match_subseq import approximate_match_subseq\n",
+    "from PyScripts.approximate_match_subseq import approximate_match_subseq\n",
     "\n",
-    "from geneReader import geneReader"
+    "from PyScripts.geneReader import geneReader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c16d9818-66aa-4a8d-9b5e-30b5e5f582ea",
+   "execution_count": 17,
+   "id": "d9d25fa0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'chr1.GRCh38.excerpt.fasta'\n",
+    "filename = 'SeqFiles/chr1.GRCh38.excerpt.fasta'\n",
     "\n",
     "data = open ( filename, 'r' )\n",
     "\n",
@@ -384,12 +405,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d074556d-6c53-4113-92a3-f1e60221aec0",
+   "execution_count": 18,
+   "id": "161ac899",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches with an indexed object using subsequences: 79\n"
+     ]
+    }
+   ],
    "source": [
     "p = 'GGCGCGGTGGCTCACGCCTGTAAT'\n",
     "\n",
@@ -401,20 +430,12 @@
     "\n",
     "print ( 'Matches with an indexed object using subsequences:', approximate_match_subseq ( p, t, n, ival ) [ 1 ] )"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2e2f84ca-1283-42da-a4f8-9420f5f6f804",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3 (Spyder)",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
