Updating scripts / formatting / notebooks
Updating various formatting and outputs from notebooks

--- a/bm_naive_counts.ipynb
+++ b/bm_naive_counts.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aa96ade6",
+   "id": "9dc87a78",
    "metadata": {},
    "source": [
-    "# Naive, Approximate, and Boyer Moore Matching Comparisons"
+    "# Matching Comparisons"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "08754214",
+   "id": "20f68a3a",
    "metadata": {},
    "source": [
     "Implementing versions of the naive exact matching and Boyer-Moore algorithms that also \n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3cf00491",
+   "id": "59a303df",
    "metadata": {},
    "source": [
     "---\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a14dc774",
+   "id": "eed0234a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "69e60da6",
+   "id": "610d3401",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "43b02300",
+   "id": "97bcb6a9",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3719836b",
+   "id": "70eee353",
    "metadata": {},
    "source": [
     "---\n",
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7e681079",
+   "id": "e3a4f2e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "609997a4",
+   "id": "1b37d2b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5db613f2",
+   "id": "12244d15",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd0f50fa",
+   "id": "be9a795b",
    "metadata": {},
    "source": [
     "---\n",
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "543e76cf",
+   "id": "768431d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0a8b6ebc",
+   "id": "306cf3d7",
    "metadata": {
     "tags": []
    },
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4e822571",
+   "id": "060d81e2",
    "metadata": {
     "tags": []
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2eb1d60f",
+   "id": "58dea7fb",
    "metadata": {},
    "source": [
     "---\n",
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a040fa19",
+   "id": "d00fece1",
    "metadata": {
     "tags": []
    },
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "de17e998",
+   "id": "f45e9565",
    "metadata": {
     "tags": []
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cd38cf16",
+   "id": "c7ea3116",
    "metadata": {
     "tags": []
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1e68ad7",
+   "id": "7e07eb89",
    "metadata": {},
    "source": [
     "---\n",
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3e6bbeda",
+   "id": "18724471",
    "metadata": {
     "tags": []
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f47951f6",
+   "id": "a9454e62",
    "metadata": {
     "tags": []
    },
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "abec1b85",
+   "id": "041508f7",
    "metadata": {
     "tags": []
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d553a051",
+   "id": "c84a1cd8",
    "metadata": {
     "tags": []
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44014657",
+   "id": "c1ed9dfe",
    "metadata": {},
    "source": [
     "### Occurences Using a SubseqIndex Object, Up to 2 Mismatches"
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "7e669d1a",
+   "id": "6b41b1c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d9d25fa0",
+   "id": "97333cb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "161ac899",
+   "id": "27f5be2a",
    "metadata": {
     "tags": []
    },
