--- a/bm_naive_counts.ipynb
+++ b/bm_naive_counts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9dc87a78",
+   "id": "4618eea5",
    "metadata": {},
    "source": [
     "# Matching Comparisons"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20f68a3a",
+   "id": "73ac134b",
    "metadata": {},
    "source": [
     "Implementing versions of the naive exact matching and Boyer-Moore algorithms that also \n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59a303df",
+   "id": "cc7c1501",
    "metadata": {},
    "source": [
     "---\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eed0234a",
+   "id": "abb977af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "610d3401",
+   "id": "bb628c82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "97bcb6a9",
+   "id": "267ee9ee",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70eee353",
+   "id": "797d458f",
    "metadata": {},
    "source": [
     "---\n",
@@ -106,19 +106,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e3a4f2e1",
+   "id": "5a9bf613",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PyScripts.naive_with_counts import naive_with_counts\n",
+    "from Py.naive_with_counts import naive_with_counts\n",
     "\n",
-    "from PyScripts.geneReader import geneReader"
+    "from Py.geneReader import geneReader"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1b37d2b4",
+   "id": "bd94ec82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "12244d15",
+   "id": "401bb9c6",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be9a795b",
+   "id": "b8990e44",
    "metadata": {},
    "source": [
     "---\n",
@@ -171,19 +171,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "768431d8",
+   "id": "9cee5bb8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PyScripts.naive_mismatches import naive_mismatches\n",
+    "from Py.naive_mismatches import naive_mismatches\n",
     "\n",
-    "from PyScripts.geneReader import geneReader"
+    "from Py.geneReader import geneReader"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "306cf3d7",
+   "id": "cf5838b1",
    "metadata": {
     "tags": []
    },
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "060d81e2",
+   "id": "7e047211",
    "metadata": {
     "tags": []
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58dea7fb",
+   "id": "3b0b55fb",
    "metadata": {},
    "source": [
     "---\n",
@@ -234,24 +234,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "d00fece1",
+   "execution_count": 1,
+   "id": "2272dae7",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from PyScripts.kmer_index import Index\n",
+    "from Py.kmer_index import Index\n",
     "\n",
-    "from PyScripts.approximate_match_idx import approximate_match_idx\n",
+    "from Py.approximate_match_idx import approximate_match_idx\n",
     "\n",
-    "from PyScripts.geneReader import geneReader"
+    "from Py.geneReader import geneReader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "f45e9565",
+   "execution_count": 2,
+   "id": "57562962",
    "metadata": {
     "tags": []
    },
@@ -268,8 +268,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c7ea3116",
+   "execution_count": 3,
+   "id": "ff5eda69",
    "metadata": {
     "tags": []
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e07eb89",
+   "id": "4d8dfd08",
    "metadata": {},
    "source": [
     "---\n",
@@ -302,21 +302,21 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "18724471",
+   "id": "559200b2",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from PyScripts.approximate_match import approximate_match\n",
+    "from Py.approximate_match import approximate_match\n",
     "\n",
-    "from PyScripts.geneReader import geneReader"
+    "from Py.geneReader import geneReader"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a9454e62",
+   "id": "766a3bc5",
    "metadata": {
     "tags": []
    },
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "041508f7",
+   "id": "7dfe26b5",
    "metadata": {
     "tags": []
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c84a1cd8",
+   "id": "e323d550",
    "metadata": {
     "tags": []
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1ed9dfe",
+   "id": "43550764",
    "metadata": {},
    "source": [
     "### Occurences Using a SubseqIndex Object, Up to 2 Mismatches"
@@ -376,21 +376,21 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "6b41b1c7",
+   "id": "fed6dbc3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PyScripts.subSequenceIdx import SubSeqIndex\n",
+    "from Py.subSequenceIdx import SubSeqIndex\n",
     "\n",
-    "from PyScripts.approximate_match_subseq import approximate_match_subseq\n",
+    "from Py.approximate_match_subseq import approximate_match_subseq\n",
     "\n",
-    "from PyScripts.geneReader import geneReader"
+    "from Py.geneReader import geneReader"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "97333cb8",
+   "id": "798bc993",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "27f5be2a",
+   "id": "ec5c8506",
    "metadata": {
     "tags": []
    },
