--- a/notes.ipynb
+++ b/notes.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0aaa7dc5",
+   "id": "292530d7",
    "metadata": {},
    "source": [
     "## |X| == |Y|\n",
     "\n",
     "#### editDistance ( X, Y ) <= hammingDistance ( X, Y )\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Edit_distance\n",
     "\n",
     "## |X| != |Y| ?\n",
     "\n",
@@ -45,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9680ddf6",
+   "id": "b1339bd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d64ad290",
+   "id": "0c67538e",
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "89cea9a8",
+   "id": "b1a33b4b",
    "metadata": {},
    "outputs": [
     {
@@ -138,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "cd952282",
+   "execution_count": 2,
+   "id": "4549f24d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,8 +200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "d3db903f",
+   "execution_count": 3,
+   "id": "e8e3cac8",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6e856206",
+   "id": "dabe731b",
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f5e5473",
+   "id": "e83a1f76",
    "metadata": {},
    "source": [
     "penalize the transversions more than transitions\n",
@@ -282,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a91dc5c7",
+   "id": "27d91390",
    "metadata": {},
    "source": [
     "### lalign ( ax, by ) \n",
@@ -311,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5cf5447",
+   "id": "b20d7674",
    "metadata": {},
    "source": [
     "Rows of the dynamic programming matrix are labeled with bases from P and columns with bases from T\n",
@@ -329,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6dc1af34",
+   "id": "0245ff76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +366,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b239c09",
+   "id": "659ea1f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f561e0dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "088fcf3c",
    "metadata": {},
    "outputs": [],
    "source": []
