--- a/NaiveMatchingAnalysis.ipynb
+++ b/NaiveMatchingAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5860a137-0a69-4fbc-844c-cfcd68de6fb2",
+   "id": "a8c256b8",
    "metadata": {},
    "source": [
     "# Naive Matching and Analysis Practice"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "e1206f29-4d98-427c-a34b-d04c5a5ec1e8",
+   "id": "f3788d02",
    "metadata": {
     "tags": []
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17113062-265b-4fe9-9eaa-9f51065015b3",
+   "id": "6856aa45",
    "metadata": {},
    "source": [
     "## Processing a FastA File"
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "c273a4b5-32ee-46f8-9087-d01552d0d636",
+   "id": "f99a05e1",
    "metadata": {
     "tags": []
    },
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "796660e6-633b-4c17-97c1-2547f5106607",
+   "id": "d39e96f4",
    "metadata": {
     "tags": []
    },
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "667b73bb-82a1-48f7-b657-fcf82861e80c",
+   "id": "1f113079",
    "metadata": {
     "tags": []
    },
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "894a1b36-0942-456a-854d-f6fba637c338",
+   "id": "bf40601c",
    "metadata": {
     "tags": []
    },
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e932b8b8-4644-4927-944f-965d1cb95a4e",
+   "id": "47c37152",
    "metadata": {
     "tags": []
    },
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9d1bb7f3-5c1d-4b4b-92ab-98db78956969",
+   "id": "f669ada2",
    "metadata": {
     "tags": []
    },
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "cb369754-5312-4afc-9cc1-b6aa8612d9ec",
+   "id": "e2b21806",
    "metadata": {
     "tags": []
    },
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "524002b8-d2e7-4cd5-b80f-66356f61273b",
+   "id": "d6c46454",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "778e3028-76fa-4519-b59e-70976cc494a7",
+   "id": "d6037ba5",
    "metadata": {
     "tags": []
    },
@@ -227,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "75ab75b9-83f7-49ba-945e-a596f3ae97ef",
+   "id": "9784cc29",
    "metadata": {
     "tags": []
    },
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f4f817e5-4f99-41b2-b813-668cc456da66",
+   "id": "0c476da9",
    "metadata": {
     "tags": []
    },
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac7d7472-955b-4e70-9d0f-7ed4302e308b",
+   "id": "1f9ebd4c",
    "metadata": {},
    "source": [
     "## Processing a FastQ File"
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4fb29036-5626-4444-806b-ab0bffa4b0fa",
+   "id": "7e22e19f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "0b4645fd-fe0e-4ac8-b13a-d38e23133447",
+   "id": "50e8c34f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a55d5b82-eea3-48f8-ac91-89b5952870a1",
+   "id": "573bf483",
    "metadata": {},
    "source": [
     "### Analysis of reads to discover the faulty cycle."
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "3cd651d4-0f0f-4025-aa71-4c85c5c3ece4",
+   "id": "687231f2",
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa3a1e46-021c-40c0-960a-d6e0fdfef7e9",
+   "id": "59bd72cc",
    "metadata": {},
    "source": [
     "_______\n",
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2decc63-cbb2-4cef-ae18-7b07df6122fc",
+   "id": "5a7145f2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -418,8 +418,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3 (Spyder)",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
@@ -432,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
