--- a/Overlaps_myAnalysis.ipynb
+++ b/Overlaps_myAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "816dbe5e",
+   "id": "8252f973",
    "metadata": {},
    "source": [
     "# Overlaps and Edit Distance - An Analysis"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9f2b0ba",
+   "id": "016e0877",
    "metadata": {},
    "source": [
     "\n",
@@ -23,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6a7f6572",
+   "execution_count": null,
+   "id": "11e26aff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,34 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "98c6e8df",
+   "execution_count": null,
+   "id": "dadd3126",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 0  1  2  3  4  5  6  7  8]\n",
-      " [ 1  1  2  3  3  4  5  6  7]\n",
-      " [ 2  2  2  3  4  3  4  5  6]\n",
-      " [ 3  3  3  3  3  4  3  4  5]\n",
-      " [ 4  4  4  4  3  4  4  4  5]\n",
-      " [ 5  4  5  4  4  4  5  4  5]\n",
-      " [ 6  5  5  5  5  5  5  5  5]\n",
-      " [ 7  6  5  6  6  6  6  6  5]\n",
-      " [ 8  7  6  6  6  7  6  7  6]\n",
-      " [ 9  8  7  7  7  6  7  7  7]\n",
-      " [10  9  8  8  7  7  6  7  8]\n",
-      " [11 10  9  9  8  7  7  7  8]\n",
-      " [12 11 10 10  9  8  8  8  7]\n",
-      " [13 12 11 10 10  9  9  8  8]\n",
-      " [14 13 12 11 11 10 10  9  9]\n",
-      " [15 14 13 12 11 11 10 10 10]\n",
-      " [16 15 14 13 12 12 11 11 11]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# %%time\n",
     "\n",
@@ -82,30 +58,18 @@
     "\n",
     "t = \"TATTGGCTATACGGTT\"\n",
     "\n",
-    "edm = np.matrix(editDistance ( t, p ) )\n",
     "\n",
-    "edm = edm.view()\n",
+    "#edm.view()\n",
     "\n",
-    "print ( edm )"
+    "editDistance ( t, p )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "dec63826",
+   "execution_count": null,
+   "id": "113ce69c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\" %%time \\n\\na = 'shake spea'\\n\\nb = 'Shakespear'\\n\\nprint ( editDistance ( a, b ) ) \""
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "''' %%time \n",
     "\n",
@@ -119,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e14fb7f9",
+   "id": "58409389",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,8 +101,121 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "id": "286e94fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "x = \"GCGTATGC\"\n",
+    "\n",
+    "y = \"TATTGGCTATACGGTT\"\n",
+    "\n",
+    "D = [ ]\n",
+    "\n",
+    "# D1 = [ ]\n",
+    "\n",
+    "# Range covers the offset row plus the length of the pattern\n",
+    "\n",
+    "for i in range ( len ( x ) + 1 ) :\n",
+    "\n",
+    "    # Initializes the dimensions of the matrix with 0s. \n",
+    "\n",
+    "    D.append ( [ 0 ] * ( len ( y ) + 1 ) )\n",
+    "\n",
+    "\n",
+    "dnp = np.matrix ( D )\n",
+    "\n",
+    "dnp = dnp.view ( )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "29553f31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of pattern: 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ( 'Length of pattern:', len  ( x ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "ba73dfc7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Length of sequence:  16\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ( 'Length of sequence: ', len ( y ) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "e99e3aad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ( dnp )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "105d0e19",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9, 17)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape ( dnp )"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "75e11910",
+   "id": "b65ef45c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -160,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
