updates to overlap
overlap analysis related things

--- a/bm_naive_counts.ipynb
+++ b/bm_naive_counts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4618eea5",
+   "id": "b3829b15",
    "metadata": {},
    "source": [
     "# Matching Comparisons"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73ac134b",
+   "id": "63abe441",
    "metadata": {},
    "source": [
     "Implementing versions of the naive exact matching and Boyer-Moore algorithms that also \n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc7c1501",
+   "id": "0bcca6db",
    "metadata": {},
    "source": [
     "---\n",
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "abb977af",
+   "id": "8cdcaf0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bb628c82",
+   "id": "976d0ca6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "267ee9ee",
+   "id": "7ff6cf90",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "797d458f",
+   "id": "10f45d50",
    "metadata": {},
    "source": [
     "---\n",
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5a9bf613",
+   "id": "08ae3efb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bd94ec82",
+   "id": "eec86770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "401bb9c6",
+   "id": "4823e125",
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8990e44",
+   "id": "2eb75c3d",
    "metadata": {},
    "source": [
     "---\n",
@@ -171,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9cee5bb8",
+   "id": "dbfa8aa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "cf5838b1",
+   "id": "398bd30a",
    "metadata": {
     "tags": []
    },
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "7e047211",
+   "id": "fbf0c229",
    "metadata": {
     "tags": []
    },
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b0b55fb",
+   "id": "4030b864",
    "metadata": {},
    "source": [
     "---\n",
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2272dae7",
+   "id": "744db3c2",
    "metadata": {
     "tags": []
    },
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "57562962",
+   "id": "66897c5b",
    "metadata": {
     "tags": []
    },
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ff5eda69",
+   "id": "dbd8f948",
    "metadata": {
     "tags": []
    },
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d8dfd08",
+   "id": "7428ac87",
    "metadata": {},
    "source": [
     "---\n",
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "559200b2",
+   "id": "70c0d4ce",
    "metadata": {
     "tags": []
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "766a3bc5",
+   "id": "7b458973",
    "metadata": {
     "tags": []
    },
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7dfe26b5",
+   "id": "d78bf653",
    "metadata": {
     "tags": []
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e323d550",
+   "id": "428303f5",
    "metadata": {
     "tags": []
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43550764",
+   "id": "ff9e51fe",
    "metadata": {},
    "source": [
     "### Occurences Using a SubseqIndex Object, Up to 2 Mismatches"
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fed6dbc3",
+   "id": "e6498c9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "798bc993",
+   "id": "3b73d408",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ec5c8506",
+   "id": "0cd35ee0",
    "metadata": {
     "tags": []
    },
@@ -434,8 +434,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3 (Spyder)",
+   "language": "python3",
    "name": "python3"
   },
   "language_info": {
