--- a/Overlaps_myAnalysis.ipynb
+++ b/Overlaps_myAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8252f973",
+   "id": "a7755614",
    "metadata": {},
    "source": [
     "# Overlaps and Edit Distance - An Analysis"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "016e0877",
+   "id": "57044ad7",
    "metadata": {},
    "source": [
     "\n",
@@ -23,8 +23,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "11e26aff",
+   "execution_count": 1,
+   "id": "39f90584",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,105 +41,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dadd3126",
+   "execution_count": 2,
+   "id": "9566a2ef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%time\n",
-    "\n",
     "from Py.editDistance import editDistance\n",
     "\n",
-    "import numpy as np\n",
-    "\n",
-    "\n",
-    "\n",
-    "p = \"GCGTATGC\"\n",
-    "\n",
-    "t = \"TATTGGCTATACGGTT\"\n",
-    "\n",
-    "\n",
-    "#edm.view()\n",
-    "\n",
-    "editDistance ( t, p )"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "113ce69c",
+   "execution_count": 3,
+   "id": "e78a14fd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' %%time \n",
+    "x = \"GATTTACCAGATTGAG\"\n",
     "\n",
-    "a = 'shake spea'\n",
+    "y = reads\n",
     "\n",
-    "b = 'Shakespear'\n",
-    "\n",
-    "print ( editDistance ( a, b ) ) '''"
+    "D = [ ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "58409389",
+   "execution_count": 4,
+   "id": "5ce9255f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''from Py.approximate_match import approximate_match\n",
-    "\n",
-    "p = \"GCGTATGC\"\n",
-    "\n",
-    "t = \"TATTGGCTATACGGTT\"\n",
-    "\n",
-    "n = 0\n",
-    "\n",
-    "print ( approximate_match ( p, t, n ) )\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "286e94fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "x = \"GCGTATGC\"\n",
-    "\n",
-    "y = \"TATTGGCTATACGGTT\"\n",
-    "\n",
-    "D = [ ]\n",
-    "\n",
-    "# D1 = [ ]\n",
-    "\n",
     "# Range covers the offset row plus the length of the pattern\n",
     "\n",
     "for i in range ( len ( x ) + 1 ) :\n",
     "\n",
     "    # Initializes the dimensions of the matrix with 0s. \n",
     "\n",
-    "    D.append ( [ 0 ] * ( len ( y ) + 1 ) )\n",
-    "\n",
-    "\n",
-    "dnp = np.matrix ( D )\n",
-    "\n",
-    "dnp = dnp.view ( )\n"
+    "    D.append ( [ 0 ] * ( len ( y ) + 1 ) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "29553f31",
+   "execution_count": 5,
+   "id": "c8287b2d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of pattern: 8\n"
+      "Length of pattern: 16\n"
      ]
     }
    ],
@@ -149,73 +101,343 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "ba73dfc7",
+   "execution_count": 16,
+   "id": "80023271",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Length of sequence:  16\n"
+      "Length of sequence: 800000\n"
      ]
     }
    ],
    "source": [
-    "print ( 'Length of sequence: ', len ( y ) )"
+    "print ( 'Length of sequence:', len ( y ) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "e99e3aad",
+   "execution_count": 7,
+   "id": "b371e1da",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]]\n"
+      "[[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]]\n"
      ]
     }
    ],
    "source": [
-    "print ( dnp )"
+    "D1 = np.matrix ( D )\n",
+    "\n",
+    "D1 = D1.view ( )\n",
+    "\n",
+    "print ( D1 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "105d0e19",
+   "execution_count": 8,
+   "id": "ad58ca5d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9, 17)"
+       "(17, 800001)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.shape ( dnp )"
+    "np.shape ( D )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "652b766a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range ( len ( x ) + 1 ) :\n",
+    "\n",
+    "    D [ i ] [ 0 ] = i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "56980b00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  0  0 ...  0  0  0]\n",
+      " [ 1  0  0 ...  0  0  0]\n",
+      " [ 2  0  0 ...  0  0  0]\n",
+      " ...\n",
+      " [14  0  0 ...  0  0  0]\n",
+      " [15  0  0 ...  0  0  0]\n",
+      " [16  0  0 ...  0  0  0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "D1 = np.matrix ( D )\n",
+    "\n",
+    "D1 = D1.view ( )\n",
+    "\n",
+    "print ( D1 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ac75abfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for j in range ( len ( y ) + 1 ) :\n",
+    "        \n",
+    "    D [ 0 ] [ j ] = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "29696448",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  0  0 ...  0  0  0]\n",
+      " [ 1  0  0 ...  0  0  0]\n",
+      " [ 2  0  0 ...  0  0  0]\n",
+      " ...\n",
+      " [14  0  0 ...  0  0  0]\n",
+      " [15  0  0 ...  0  0  0]\n",
+      " [16  0  0 ...  0  0  0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "D1 = np.matrix ( D )\n",
+    "\n",
+    "D1 = D1.view ( )\n",
+    "\n",
+    "print ( D1 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8c812b83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fills in the rest of the matrix rows and columns.\n",
+    "#\n",
+    "# Starts at  row 1. \n",
+    "\n",
+    "for i in range ( 1, len ( x ) + 1 ) :\n",
+    "\n",
+    "    # goes by column, starts at column 1\n",
+    "\n",
+    "    for j in range ( 1, len ( y ) + 1 ) : \n",
+    "\n",
+    "    # value that is left adjacent to the current value, \n",
+    "        # plus 1 is the penalty for character skipping\n",
+    "\n",
+    "        distHor = D [ i ] [ j - 1 ] + 1 \n",
+    "\n",
+    "        # value that is up adjacent to the current value, \n",
+    "            # plus 1 is the penalty for character skipping\n",
+    "\n",
+    "        distVer = D [ i - 1 ] [ j ] + 1\n",
+    "\n",
+    "        # edit distance does not further increase if there is a match\n",
+    "\n",
+    "            # aka, if matches, does not incur penalty\n",
+    "\n",
+    "        if x [ i - 1 ] == y [ j - 1 ] : \n",
+    "\n",
+    "            # Diagonal up/left distance\n",
+    "\n",
+    "            distDiag = D [ i - 1 ] [ j - 1 ] \n",
+    "\n",
+    "\n",
+    "        # otherwise, diagonal distance value increases by 1\n",
+    "\n",
+    "        else :\n",
+    "\n",
+    "            distDiag = D [ i - 1 ] [ j - 1 ] + 1 \n",
+    "\n",
+    "\n",
+    "        # min () takes the minimum edit distance of the 3 possible values\n",
+    "        # so this value will be inserted for the current iteration\n",
+    "        # of row i, column j. \n",
+    "\n",
+    "        D [ i ] [ j ] = min ( distHor, distVer, distDiag ) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "bec0f988",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  0  0 ...  0  0  0]\n",
+      " [ 1  1  1 ...  1  0  0]\n",
+      " [ 2  2  2 ...  0  1  1]\n",
+      " ...\n",
+      " [14 13 12 ...  8  7  7]\n",
+      " [15 14 13 ...  7  8  8]\n",
+      " [16 15 14 ...  8  7  8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "D1 = np.matrix ( D )\n",
+    "\n",
+    "D1 = D1.view ( )\n",
+    "\n",
+    "print ( D1 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "eb4780ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We are interested in the minimum value of the bottom row.\n",
+    "\n",
+    "print ( min ( D [ -1 ] ) )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b65ef45c",
+   "id": "bb0d5b82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from Py.geneReaderQ import geneReaderQ\n",
+    "\n",
+    "filename = 'SeqFiles/ERR266411_1.for_asm.fastq'\n",
+    "\n",
+    "data = open ( filename, 'r' )\n",
+    "\n",
+    "reads = geneReaderQ ( filename )\n",
+    "\n",
+    "data.close ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "6b6efa46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = 0  # start all the way at the left\n",
+    "\n",
+    "a = \n",
+    "\n",
+    "b = reads \n",
+    "\n",
+    "k = 30\n",
+    "\n",
+    "min_length = k\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b45b989b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "2a8f0fa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'B'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "setobj = [ ]\n",
+    "dictobj = { }\n",
+    "\n",
+    "reads = ['ABCDEFG', 'EFGHIJ', 'HIJABC']\n",
+    "\n",
+    "k = 3\n",
+    "\n",
+    "\n",
+    "if len ( reads [ i ] ) < k :\n",
+    "                \n",
+    "    return 0\n",
+    "    \n",
+    "else :\n",
+    "        \n",
+    "    for i in reads :\n",
+    "\n",
+    "        for j in reads [ i ] :\n",
+    "            \n",
+    "            if ( ( j + 2 ) < )\n",
+    "            setobj.append ( reads [ i ] [ j ] )\n",
+    "\n",
+    "        \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42abfac6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -237,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
